--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://media.istockphoto.com/id/1485650976/photo/business-shopping-online-concept-3d-rendering.webp?a=1&b=1&s=612x612&w=0&k=20&c=zK2PgrA45SNXLGbsYNISO3ZIvPD8gvplU9M-c64Qf4g=" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shoply - Discover products you’ll love</title>
+    <title>Shoply - Discover products you&apos;ll love</title>
     <meta name="description" content="Shoply: Curated deals across fashion, gadgets, and home essentials. Free shipping over $50, easy returns." />
-    <meta property="og:title" content="Shoply - Discover products you’ll love" />
+    <meta property="og:title" content="Shoply - Discover products you'll love" />
     <meta property="og:description" content="Curated deals across fashion, gadgets, and home essentials." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="/" />
